--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "expo": "~50.0.4",
+    "expo-camera": "~14.0.3",
+    "expo-dev-client": "~3.3.7",
+    "expo-media-library": "~15.9.1",
+    "expo-sharing": "~11.10.0",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2"
